tests/fixtures/invalid/invalid_decimal_precision.avsc
{
  "type": "record",
  "name": "InvalidDecimal",
  "fields": [
    {
      "name": "decimal_field",
      "type": {
        "type": "fixed",
        "name": "BadDecimal",
        "size": 16,
        "logicalType": "decimal"
      }
    }
  ]
}
